fix(TR-73):add properties for cropping text in cards.scss

--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -34,12 +34,13 @@
     &-description,
     &-user {
       width: 130px;
-      height: 35px;
+      height: 30px;
       padding: 2px 5px;
       box-sizing: border-box;
       font-size: 16px;
       font-weight: normal;
       overflow: hidden;
+      white-space: nowrap;
       text-overflow: ellipsis;
 
       &--hidden {
@@ -52,7 +53,9 @@
     &-description,
     &-user {
       width: 180px;
-      height: 35px;
+      height: 30px;
+      overflow: hidden;
+      white-space: nowrap;
       text-overflow: ellipsis;
     }
     &-description--lg {
